--- a/hospital_management/views/menu.xml
+++ b/hospital_management/views/menu.xml
@@ -2,7 +2,10 @@
 <odoo>
 
     <menuitem id="menu_hospital_root" name="Hospital" sequence="0" web_icon="hospital_management,static/description/icon.png"/>
+    
     <menuitem id="menu_hospital_patinet_details" name="Patinet Details" parent="menu_hospital_root" sequence="0"/>
     <menuitem id="menu_hospital_patinet" name="patinet" action="action_hospital_petinet" parent="menu_hospital_patinet_details" sequence="0"/>
+    
+    <menuitem id="menu_hospital_appointment" name="Appointment" action="action_hospital_appointment" parent="menu_hospital_root" sequence="0"/>
 
 </odoo>
