--- a/hospital_management/views/view_hospital_patinet.xml
+++ b/hospital_management/views/view_hospital_patinet.xml
@@ -24,6 +24,7 @@
                         <group>
                             <group>
                                 <field name="name"/>
+                                <field name="dob"/>
                                 <field name="age"/>
                             </group>
                             <group>
@@ -33,6 +34,13 @@
                             </group>
                         </group>
                     </sheet>
+
+                    <!-- Chatter -->
+                    <div class="oe_chatter">
+                        <field name="message_follower_ids" groups="base.group_user"/>
+                        <field name="activity_ids"/>
+                        <field name="message_ids"/>
+                    </div>
                 </form>
             </field>
         </record>
@@ -67,7 +75,11 @@
                     <group name="male" string="string">
                         <filter name="group_by_gender" string="Gender" context="{'group_by': 'gender'}"/>
                         <filter name="group_by_age" string="Age" context="{'group_by': 'age'}"/>
+                        <!-- <filter name="group_by_user" string="User" context="{'group_by': 'uid'}"/> -->
                     </group>
+                    <searchpanel>
+                        <field name="gender" icon="fa-filter" select="multi" string="Gender" enable_counters="1"/>
+                    </searchpanel>
                 </search>
             </field>
         </record>
@@ -76,6 +88,13 @@
             <field name="name">Hospital Petinet</field>
             <field name="res_model">hospital.patient</field>
             <field name="view_mode">tree,form</field>
+            
+            <!-- <field name="context">{default_gender:'male'}</field> -->
+            <!-- context used to pass default value in field anso apply defult groupby or filter using context -->
+
+            <!-- <field name="domain">[('gender', '=', 'female')]</field> -->
+            <!-- Here domain is used to filter data by using above domain only femail patient will display-->
+            <!-- To Apply multiple domain add new tupple in domain list also you can apply conditions like (and,or) for more ref. default module-->
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
                     Create Your First Patinet
