[17.0][ADD] new features

--- a/hospital_management/views/view_hospital_patinet.xml
+++ b/hospital_management/views/view_hospital_patinet.xml
@@ -33,6 +33,11 @@
                                 <field name="active" invisible="True"/>
                             </group>
                         </group>
+                        <notebook>
+                            <page name="Appointment" string="Appointment">
+                                <field name="appointment_ids"></field>
+                            </page>
+                        </notebook>
                     </sheet>
 
                     <!-- Chatter -->
