--- a/hospital_management/views/view_hospital_appointment.xml
+++ b/hospital_management/views/view_hospital_appointment.xml
@@ -64,7 +64,21 @@
                                        placeholder="Enter your Prescrition here........."/>
                             </page>
                             <page name="pharmacy" string="Pharmacy">
-                                
+                                <field name="medicine_ids">
+                                    <tree editable="bottom">
+                                        <field name="product_id"/>
+                                        <field name="qty"/>
+                                        <field name="price"/>
+                                    </tree>
+                                    <form>
+                                        <group>
+                                            <field name="appointment_id" invisible="1"/>
+                                            <field name="product_id"/>
+                                            <field name="qty"/>
+                                            <field name="price"/>
+                                        </group>
+                                    </form>
+                                </field>
                             </page>
                         </notebook>
                     </sheet>
